[package]
name = "df-crash-miner"
version = "0.1.0"
authors = ["Rob Parrett <robparrett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1"
dirs = "3.0"
tar = "0.4"
bzip2 = "0.4"
glob = "0.3"
anyhow = "1.0"
lazy_static = "1.4"
chrono = "0.4"
